--- a/package.json
+++ b/package.json
@@ -17,16 +17,14 @@
   },
   "homepage": "https://github.com/px1club/ab#readme",
   "dependencies": {
-    "@paypal/checkout-server-sdk": "^1.0.2",
-    "crypto": "^1.0.1",
-    "discord.js": "^12.5.1",
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-rate-limit": "^5.2.6",
-    "fs": "0.0.1-security",
+    "hwid": "^0.4.0",
     "mysql": "^2.18.1",
-    "rate-limit-mongo": "^2.3.0",
-    "request": "^2.88.2",
-    "shortest-api": "^1.0.0",
-    "sqreen": "^1.62.0"
+    "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nexe": "^4.0.0-beta.18"
   }
 }
