--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/px1club/ab#readme",
   "dependencies": {
+    "@sentry/browser": "^6.8.0",
+    "@sentry/node": "^6.8.0",
+    "@sentry/tracing": "^6.8.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
