--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "node-machine-id": "^1.1.12",
+    "readline": "^1.3.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
